Service page added started banner and installed tailwind

--- a/src/assets/style/PartnerClient.module.css
+++ b/src/assets/style/PartnerClient.module.css
@@ -36,9 +36,8 @@
 }
 
 .card {
-    /* background: radial-gradient(circle at center, rgba(255, 255, 255, 0.05) 0%, rgba(0, 0, 0, 0.7) 100%); */
-    background: url("../images/Partners/CardBg.png") no-repeat center center / cover, radial-gradient(circle at center, rgba(255, 255, 255, 0.05) 0%, rgba(0, 0, 0, 0.7) 100%);
-    ;
+    background: url("../images/Partners/CardBg.png") no-repeat center center / cover,
+        radial-gradient(circle at center, rgba(255, 255, 255, 0.05) 0%, rgba(0, 0, 0, 0.7) 100%);
     border: 1px solid #222;
     border-radius: 1rem;
     min-height: 515px;
