--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+@import "tailwindcss";
+
+.clip-left-diagonal {
+  clip-path: polygon(0 0, 100% 0, 70% 100%, 0% 100%);
+}
+
+.clip-right-diagonal {
+  clip-path: polygon(30% 0, 100% 0, 100% 100%, 0% 100%);
+}
+
+
 :root {
   --background-color: #1f1f1f;
   --text-color: #ffffff;
